--- a/templates/edit.html
+++ b/templates/edit.html
@@ -2,7 +2,7 @@
 {% block title %}Edit PDF - RevisePDF{% endblock %}
 {% block content %}
     <div class="container">
-        <h1>Edit PDF</h1>
+        <h1>Edit PDF - (To View Only)</h1>
         <div class="pdf-container">
             <embed src="{{ url_for('static', filename='uploads/' + filename) }}" type="application/pdf" width="100%" height="600px" />
         </div>
