--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>{% block title %}RevisePDF{% endblock %}</title>
+        <title>{% block title %}RevisePDF - Easily Edit & Improve Your PDFs{% endblock %}</title>
+        <meta name="description" content="RevisePDF makes it simple to update and improve your PDF documents online, no fuss.">
+        <meta name="keywords" content="PDF editor, edit PDFs, online PDF, improve PDF, revise PDF">
+        <meta name="author" content="RevisePDF">
+        <link rel="canonical" href="https://www.revisepdf.com/">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
         <style>
             body{min-height: 100vh; display: flex; flex-direction: column;}
