as submission has been marked i can release what i have been doing in the mean time.

--- a/templates/about.html
+++ b/templates/about.html
@@ -2,5 +2,31 @@
 {% block title %}About - RevisePDF{% endblock %}
 {% block content %}
     <h1>About RevisePDF</h1>
-    <p>RevisePDF is here to make PDF editing simple and fast. Our mission is to provide a hassle free way for you to edit, merge, and manage PDFs online.</p>
+    <p>Hi, I'm Calum, and I'm the one-man army behind RevisePDF. This website is here to make PDF editing simple and fast. My mission is to provide a hassle-free way for you to edit, merge, and manage PDFs online without the corporate nonsense.</p>
+
+    <div class="row mt-5">
+        <div class="col-md-6">
+            <h3>My Vision</h3>
+            <p>I aim to make RevisePDF the go-to platform for all your PDF needs, combining powerful tools with a seamless user experience, all created and maintained by me.</p>
+        </div>
+        <div class="col-md-6">
+            <h3>What I Offer</h3>
+            <ul>
+                <li>Fast and secure PDF editing tools</li>
+                <li>Comprehensive options for organising, converting, and securing PDFs</li>
+                <li>A user-friendly interface designed with you in mind</li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="row mt-4">
+        <div class="col-md-6">
+            <h3>Why Choose RevisePDF?</h3>
+            <p>Unlike big organisations, I'm not here to leech money from you. If I ever introduce a subscription service, it would purely be to cover the costs of running the dynos for the website. This would allow for handling larger files and improving performance.</p>
+        </div>
+        <div class="col-md-6">
+            <h3>Contact Me</h3>
+            <p>Have questions or feedback? I'd love to hear from you! Reach out at <a href="mailto:calum@revisepdf.com">calum@revisepdf.com</a>.</p>
+        </div>
+    </div>
 {% endblock %}
