--- a/templates/pages/organise/merge.html
+++ b/templates/pages/organise/merge.html
@@ -23,6 +23,10 @@
                                     <input type="file" id="fileElem" multiple accept="application/pdf" name="files" style="display:none">
                                 </div>
                             </div>
+                            <div class="mb-3">
+                                <label for="outputFilename" class="form-label">Output File Name</label>
+                                <input type="text" class="form-control" id="outputFilename" name="outputFilename" placeholder="Save PDF File as...">
+                            </div>
                             <div class="d-grid gap-2">
                                 <ul id="file-list"></ul>
                                 <button type="submit" class="btn border border-secondary">Merge PDF</button>
