Added functionality for viewing list of files being merged

--- a/templates/pages/organise/merge.html
+++ b/templates/pages/organise/merge.html
@@ -28,6 +28,7 @@
                                 <input type="text" class="form-control" id="outputFilename" name="outputFilename" placeholder="Save PDF File as...">
                             </div>
                             <div class="d-grid gap-2">
+                                <p class="lead">Files to be merged:</p>
                                 <ul id="file-list"></ul>
                                 <button type="submit" class="btn border border-secondary">Merge PDF</button>
                             </div>
