--- a/templates/pages/organise/merge.html
+++ b/templates/pages/organise/merge.html
@@ -24,7 +24,7 @@
                                 </div>
                             </div>
                             <div class="mb-3">
-                                <label for="outputFilename" class="form-label">Output File Name</label>
+                                <label for="outputFilename" class="form-label">Output File Name:</label>
                                 <input type="text" class="form-control" id="outputFilename" name="outputFilename" placeholder="Save PDF File as...">
                             </div>
                             <div class="d-grid gap-2">
